--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portal 6: Quiz</title>
+  <title>Portal 6: Quizbee</title>
   <link href="styles.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="favicon.png">
   <script defer src="script.js"></script>
@@ -40,6 +40,7 @@
         <img src='PassPage.png' id="pass-page" alt="Pass Page" class="hide" width="600 px" height="254 px" >
         <img src='FailPage.png' id="fail-page" alt="Fail Page" class="hide" width="600 px" height="254 px" >
         <input type="image" src="RestartButton.png" name="restart-btn" id="restart-btn" class="restart-btn hide">
+        <input type="image" src="ReturnButton.png" class="return-btn hide" id="return-btn" onclick="window.location.href='https://interaktiv.benilde.edu.ph/?page_id=2103';">
       </div>
     </div>
     <input type="image" src="NextButton.png" name="next-btn" id="next-btn" class="next-btn hide">
